[project]
name = "mg_runs"
version = "0.1.0"
dependencies = [
    "jax",
    "neural_networks @ git+https://github.com/MoWeeeZ/neural_networks.git@cluster",
    # "x_xy @ git+https://github.com/MoWeeeZ/x_xy_v2.git@cluster",
]


[tool.black]
line-length = 120
# exclude-extend = '''
# '''

[tool.isort]
line_length = 120
profile = "black"
known_typing = "typing" # types,typing_extensions,mypy,mypy_extensions
# default: "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
# skip_glob = [""]  # files/folders/... to skip
# known_first_party = [""]  # packages that are forced as first party
# src_paths = [""]  # files inside these paths are treated as first party
multi_line_output = 5
float_to_top = true
group_by_package = true
combine_as_imports = true

[tool.ruff]
line-length = 120
select = ["E", "F"]
target-version = "py311"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
